fix blurry text and style talk gif button on featured posts

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1146,19 +1146,19 @@ code[class*=language-], pre[class*=language-] {
 /* acceleration on firefox */
 @keyframes pulse {
   0%{
-    transform: scale(1) rotate(0.01deg);
+    transform: scale(1) rotate(0.01deg) perspective(1px) translateZ(0);
   }
   100%{
-    transform: scale(1.025) rotate(0.01deg);
+    transform: scale(1.025) rotate(0.01deg) perspective(1px) translateZ(0);
   }
 }
 
 @keyframes pulse-out {
   0%{
-    transform: scale(1.025) rotate(0.01deg);
+    transform: scale(1.025) rotate(0.01deg) perspective(1px) translateZ(0);
   }
   100%{
-    transform: scale(1) rotate(0.01deg);
+    transform: scale(1) rotate(0.01deg) perspective(1px) translateZ(0);
   }
 }
 
@@ -1182,16 +1182,22 @@ code[class*=language-], pre[class*=language-] {
     .post-card:hover .post-card-tags  {
         animation: pulse 0.8s ease-in-out -0.3s infinite;
         animation-direction: alternate;
+        backface-visibility: hidden;
+        -webkit-font-smoothing: subpixel-antialiased;
     }
 
     .post-card:hover .post-card-metadata  {
         animation: pulse 0.8s ease-in-out 0.9s infinite;
         animation-direction: alternate;
+        backface-visibility: hidden;
+        -webkit-font-smoothing: subpixel-antialiased;
     }
 
     .post-card:hover .post-card-title {
         animation: pulse 0.8s ease-in-out 0.1s infinite;
         animation-direction: alternate;
+        backface-visibility: hidden;
+        -webkit-font-smoothing: subpixel-antialiased;
     }
 
     .post-card .post-card-tags,
@@ -1199,6 +1205,9 @@ code[class*=language-], pre[class*=language-] {
     .post-card .post-card-title {
         animation: pulse-out 0.8s ease-in-out;
         animation-direction: normal;
+        backface-visibility: hidden;
+        transform: translateZ(0);
+        -webkit-font-smoothing: subpixel-antialiased;
     }
 }
 
